# enc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  actions.yml  config.example.yaml  mkdocs.yml  pyproject.toml  requirements.mkdocs.txt  requirements.txt
.github/workflows/: main.yml  test_installation.yml
data/lebel_data/: README.md  articulationdict.json  sess_to_story.json
docs/: data.md  download_data.md  features.md  index.md  main.md  regression.md  run_all.md  utils.md
hpc/: README.md  run_all_lebel-1.script  run_all_lebel-2.script  run_all_lebel-3.script  run_all_lebel-4.script  run_all_lebel.script  run_all_slurm.script  submit_jobs.sh
hpc/extension_ridgeCV/: debug.script  exten-exp_UTS01-1.script  exten-exp_UTS01-11.script  exten-exp_UTS01-13.script  exten-exp_UTS01-15.script  exten-exp_UTS01-17.script  exten-exp_UTS01-19.script  exten-exp_UTS01-21.script  exten-exp_UTS01-23.script  exten-exp_UTS01-25.script  exten-exp_UTS01-3.script  exten-exp_UTS01-5.script  exten-exp_UTS01-7.script  exten-exp_UTS01-9.script  exten-exp_UTS02-1.script  exten-exp_UTS02-11.script  exten-exp_UTS02-13.script  exten-exp_UTS02-15.script  exten-exp_UTS02-17.script  exten-exp_UTS02-19.script  exten-exp_UTS02-21.script  exten-exp_UTS02-23.script  exten-exp_UTS02-25.script  exten-exp_UTS02-3.script  exten-exp_UTS02-5.script  exten-exp_UTS02-7.script  exten-exp_UTS02-9.script  exten-exp_UTS03-1.script  exten-exp_UTS03-11.script  exten-exp_UTS03-13.script  exten-exp_UTS03-15.script  exten-exp_UTS03-17.script  exten-exp_UTS03-19.script  exten-exp_UTS03-21.script  exten-exp_UTS03-23.script  exten-exp_UTS03-25.script  exten-exp_UTS03-3.script  (+5 more)
report/: report.md
src/: data.py  features.py  main.py  plot.py  regression.py  run_all.py  utils.py
tests/: test_data.py  test_utils.py
(+141 files in other folders)
