[tool.poetry]
name = "encoders"
version = "0.1.0"
description = "Project to reproducing fMRI encoding models by LeBel et al (2023)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datalad = "^1.1.3"
numpy = "^2.0.2"
scipy = "^1.13.1"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"
pyyaml = "^6.0.2"
h5py = "^3.11.0"
setuptools = "^72.1.0"
cython = "^0.29.37"
pycortex = "^1.2.8"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
