[tool.poetry]
name = "encoders"
version = "1.0.0-alpha.2"
description = "Project to reproducing fMRI encoding models by LeBel et al (2023)"
authors = [
    "Kristijan Armeni <kristijan.armeni@gmail.com>",
    "Gabriel Kressin Palacios <gkressi1@jhu.edu>",
    "Gio Zhuoyang Li <zli230@jhu.edu>",
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datalad = "^1.1.3"
numpy = "^2.0.2"
scipy = "^1.13.1"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"
pyyaml = "^6.0.2"
h5py = "^3.11.0"
setuptools = "^72.1.0"
cython = "^0.29.37"
pycortex = "^1.2.8"
ipython = "^8.18.1"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mkdocs-material = "^9.5.50"
markdown = "^3.7"
pymdown-extensions = "^10.14.1"
tables = "^3.10.2"
seaborn = "^0.13.2"
rich = "^13.9.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "E501"]
ignore = ["F401"]
